# pytonisa-ocr-bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  handlers.py  logs.py  ocr-bot.py  ocrbot.py  queuemessage.py  requirements.txt
assets/architecture/: architecture.drawio
pytonisacommons/: setup.py
pytonisacommons/pytonisacommons/: __init__.py
pytonisacommons/pytonisacommons/configs/: Logs.py
pytonisacommons/pytonisacommons/objects/: OcrArgs.py  PytonisaDB.py  PytonisaFileStorage.py  QueueMessage.py  Queues.py
pytonisaocrprocessor/ocrmypdfprocessor/: Dockerfile  ocrmypdfprocessor.py  pyproject.toml  queuehandler.py  requirements.txt
pytonisatelegramclient/: Dockerfile  MessageHandlers.py  OcrBot.py  QueueHandlers.py  messagehandlers.py  ocrbot.py  pyproject.toml  queuehandlers.py  requirements.txt
src/: MessageHandlers.py  OcrBot.py
telegram-client/: MessageHandlers.py  QueueHandlers.py  requirements.txt
telegram-client/src/: QueueHandlers.py
telegram-client/src/objects/: Queues.py
