[tool.poetry]
name = "pytonisa-telegram-client"
version = "2.0.0"
description = ""
authors = ["Luís Chaves <luis.chaves_@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aio-pika = "^7.1.1"
Telethon = "^1.24.0"
pytonisacommons = {path = "../pytonisacommons"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.1.13"]
build-backend = "poetry.core.masonry.api"
