[tool.poetry]
name = "ocrmypdf-processor"
version = "2.0.0"
description = ""
authors = ["Luís Chaves <luis.chaves_@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pika = "^1.2.0"
pytonisacommons = {path = "../../pytonisacommons"}
ocrmypdf = "^13.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
